# lumen2

./: .gitignore  .mcp.json  README.md
backend/: .env.example  lumen.duckdb.wal  pyproject.toml
backend/app/: agents.py  config.py  data_store.py  main.py  mcp_server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChartsView.tsx  DataTableView.tsx  Header.tsx  LumenChart.tsx  OverviewView.tsx  ReportView.tsx  Sidebar.tsx
sample_data/: sales_q1_2026.csv
